--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -28,13 +28,13 @@
                 </div>
 
                 <div class="filter-group">
-                    <label for="drive-time-sydney">Drive time to Sutherland <span id="drive-time-sydney-value">Any</span></label>
+                    <label for="drive-time-sydney">Drive to Sutherland <span id="drive-time-sydney-value">Any</span></label>
                     <input type="range" id="drive-time-sydney" min="15" max="255" step="15" value="255">
                 </div>
 
                 <div class="filter-group">
-                    <label for="distance-town">Distance from town <span id="distance-town-value">Any</span></label>
-                    <input type="range" id="distance-town" min="0" max="100" value="100">
+                    <label for="drive-time-town">Drive to nearest town <span id="drive-time-town-value">Any</span></label>
+                    <input type="range" id="drive-time-town" min="5" max="60" step="5" value="60">
                 </div>
 
                 <div class="filter-group">
