--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -81,13 +81,11 @@
             </div>
         </main>
 
-        <!-- Property Detail Modal -->
-        <div id="property-modal" class="modal hidden">
-            <div class="modal-content">
-                <button class="modal-close">&times;</button>
-                <div id="property-detail"></div>
-            </div>
-        </div>
+        <!-- Property Details Sidebar -->
+        <aside id="property-sidebar" class="hidden">
+            <button class="sidebar-close">&times;</button>
+            <div id="property-detail"></div>
+        </aside>
     </div>
 
     <script src="https://unpkg.com/maplibre-gl@4.1.0/dist/maplibre-gl.js"></script>
