Add fullscreen image modal for property gallery
Click main carousel image to open fullscreen view with navigation,
keyboard support (arrows/Escape), and close on click outside.

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -86,6 +86,17 @@
             <button class="sidebar-close">&times;</button>
             <div id="property-detail"></div>
         </aside>
+
+        <!-- Fullscreen Image Modal -->
+        <div id="fullscreen-modal" class="fullscreen-modal hidden">
+            <button class="fullscreen-close">&times;</button>
+            <button class="fullscreen-nav fullscreen-prev">&lsaquo;</button>
+            <button class="fullscreen-nav fullscreen-next">&rsaquo;</button>
+            <div class="fullscreen-content">
+                <img src="" alt="Property image" class="fullscreen-img">
+            </div>
+            <div class="fullscreen-counter"></div>
+        </div>
     </div>
 
     <script src="https://unpkg.com/maplibre-gl@4.1.0/dist/maplibre-gl.js"></script>
