--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -38,8 +38,8 @@
                 </div>
 
                 <div class="filter-group">
-                    <label for="distance-school">Distance from school <span id="distance-school-value">Any</span></label>
-                    <input type="range" id="distance-school" min="0" max="50" value="50">
+                    <label for="drive-time-school">Drive to primary school <span id="drive-time-school-value">Any</span></label>
+                    <input type="range" id="drive-time-school" min="5" max="60" step="5" value="60">
                 </div>
 
                 <div class="filter-actions">
